@@ -1,3 +1,7 @@
+2008-09-29  Derek R. Price  <derek@ximbiot.com>
+
+	* client.c (is_cvsroot_level): Improve commenting, minor cleanup.
+
 2008-09-28  Derek R. Price  <derek@ximbiot.com>
 
 	* checkout.c (checkout): Minor cleanup.
